--- a/package.json
+++ b/package.json
@@ -3,7 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "countdown": "^2.6.0",
+    "immutability-helper": "^3.0.0",
+    "moment": "^2.24.0",
+    "moment-countdown": "0.0.3",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-axios": "^2.0.3",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
