--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "homepage" : "https://tannergalloway.github.io/Cookbook/"
   },
   "eslintConfig": {
     "extends": "react-app"
